<?xml version="1.0"?>
<package format="2">
  <name>rclpy</name>
  <version>0.0.0</version>
  <description>Package containing the Python client.</description>
  <maintainer email="esteve@osrfoundation.org">Esteve Fernandez</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rmw_implementation_cmake</build_depend>

  <depend>rmw_implementation</depend>
  <depend>rcl</depend>

<!--
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>rmw_implementation</depend>
-->

  <test_depend>ament_cmake_nose</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>rosidl_generator_py</test_depend>
  <test_depend>rosidl_typesupport_opensplice_c</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
