<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>rclpy</name>
  <version>1.0.4</version>
  <description>Package containing the Python client.</description>

  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>

  <license>Apache License 2.0</license>

  <author email="esteve@osrfoundation.org">Esteve Fernandez</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>python_cmake_module</buildtool_depend>

  <build_depend>rcutils</build_depend>
  <build_depend>rmw_implementation_cmake</build_depend>

  <depend>rmw_implementation</depend>
  <depend>rcl</depend>
  <depend>rcl_action</depend>
  <depend>rcl_yaml_param_parser</depend>
  <depend>unique_identifier_msgs</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>rpyutils</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>rosidl_generator_py</test_depend>
  <test_depend>test_msgs</test_depend>

  <doc_depend>python3-sphinx</doc_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
