<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rclpy_components</name>
  <version>1.1.0</version>
  <description>The dynamic node management package</description>
  <maintainer email="juzhen@huawei.com">Zhen Ju</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>composition_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>composition_interfaces</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
